--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ],
   "routes": [
     {
-      "src": "/download/(.*)",
+      "src": "/download/facebook",
+      "dest": "/server.js"
+    },
+    {
+      "src": "/download/instagram",
+      "dest": "/server.js"
+    },
+    {
+      "src": "/download/tiktok",
       "dest": "/server.js"
     }
   ]
